--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
     "next": "14.2.3",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18",
     "react-dom": "^18"
   },
